--- a/views/partials/_post.hbs
+++ b/views/partials/_post.hbs
@@ -1,7 +1,7 @@
 <div class="col s12 m6">
     <div class="card teal lighten-3">
         <div class="card-content white-text">
-            <a href="/post/view/{{_id}}" class="card-title post-title black-text">
+            <a href="/post/view/{{slug}}" class="card-title post-title black-text">
                 <h4 class="center">{{title}}</h4>
             </a>
             <div class="post-author center">
@@ -21,10 +21,10 @@
             </div>
         </div>
         <div class="card-action post-actions center">
-            <a class="black-text btn grey lighten-3" href="/post/view/{{_id}}">View Post</a>
+            <a class="black-text btn grey lighten-3" href="/post/view/{{slug}}">View Post</a>
             {{#if (strComp user._id loggedUser._id)}}
-            <a class="black-text btn grey lighten-3" href="/post/edit/{{_id}}">Edit Post</a>
-            <form action="/post/{{_id}}" method="POST">
+            <a class="black-text btn grey lighten-3" href="/post/edit/{{slug}}">Edit Post</a>
+            <form action="/post/{{slug}}" method="POST">
                 <input type="hidden" name="_method" value="DELETE">
                 <button type="submit" class="black-text btn orange lighten-3"><i class="fas fa-trash-alt"></i></button>
             </form>
