--- a/views/post/editPost.hbs
+++ b/views/post/editPost.hbs
@@ -1,6 +1,6 @@
 <div class="row">
     <h2>Edit Post!</h2>
-    <form action="/post/{{post._id}}" method="POST">
+    <form action="/post/{{post.slug}}" method="POST">
     <input type="hidden" name="_method" value="PUT">
         <div class="row">
             <div class="input-field">
