--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -112,6 +112,10 @@
   margin-bottom: 2rem;
 }
 
+.paginator-container{
+  margin-top: 4rem;
+}
+
 @media only screen and (min-width: 993px) {
   #error-msg-404{
     margin-top: -90px;
