--- a/views/partials/_paginator.hbs
+++ b/views/partials/_paginator.hbs
@@ -15,7 +15,7 @@
                 {{#if ../isLastPage }}
                     <li class="disabled"><a><i class="material-icons">chevron_right</i></a></li>
                 {{else }}
-                    <li class="waves-effect>"><a href="{{../url}}?page={{add ../page 1}}&size={{../size}}"><i class="material-icons">chevron_right</i></a></li>
+                    <li class="waves-effect"><a href="{{../url}}?page={{add ../page 1}}&size={{../size}}"><i class="material-icons">chevron_right</i></a></li>
                 {{/if }}
             {{/if }}
 
